--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-10 20:28:48
+lastsearch = 2024-08-11 09:22:48
 
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOorGEwUt76qJus9rMHWImkTqcFNKTScu-J9xgVb4ghcUuY2b3GQ2
 
 [noithatdaithanh.vn]
 match = -47.6%%
@@ -22,9 +22,9 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 16 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=Ieb3ZcvtGyI
+match = -100.0%%
+title = Tình Cờ - Tập 16 | Phim Bộ Tình Cảm Đài Loan Hay Nhất ...
+url = https://www.youtube.com/watch?v=dBJXDZlf9_4
 
 [m.facebook.com]
 match = -95.2%%
@@ -87,9 +87,9 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [www.facebook.com]
-match = -100.0%%
-title = Trấn Thành - Lịch chiếu MAI ở Đài Loan nha!!! Cả nhà cập...
-url = https://www.facebook.com/tran.thanh.ne/posts/lịch-chiếu-mai-ở-đài-loan-nha-cả-nhà-cập-nhật-để-đi-xem-cho-dễ-ạh-ra-rạp-thôi-đà/1026713498818919/
+match = -181.0%%
+title = 20240416 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
+url = https://www.facebook.com/ptsvietnamesenews/videos/20240416-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/452366227450173/
 
 [cau-ca.com]
 match = -42.9%%
@@ -142,9 +142,9 @@ title = Lịch chiếu
 url = https://chieuphimquocgia.com.vn/movies
 
 [vnexpress.net]
-match = -95.2%%
-title = Loạt tiêm kích F-16 hiện đại nhất Đài Loan bị hỏng do ...
-url = https://vnexpress.net/loat-tiem-kich-f-16-hien-dai-nhat-dai-loan-bi-hong-do-dong-dat-4730265.html
+match = -100.0%%
+title = Tiêm kích F-16 Đài Loan rơi - Tin tức mới nhất 24h qua
+url = https://vnexpress.net/tag/tiem-kich-f-16-dai-loan-roi-1020827
 
 [vietsuntravel.com]
 match = -28.6%%
