--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-11 03:37:50
+lastsearch = 2024-08-11 09:32:39
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu nhựa Hà Nội 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html?srsltid=AfmBOopQq-jgeondOnb0EhGMYUaLR8wsidBWs9nxRC1bXCmL1uSOS8f8
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 
 [shopee.vn]
 match = -7.1%%
