--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-11 00:13:56
+lastsearch = 2024-08-11 09:24:34
 
 [demxanh.com]
 match = 42.4%%
@@ -64,7 +64,7 @@ url = https://chieutrelanlan.com/chia-se-nhung-dia-chi-mua-chieu-truc-tam-uy-tin
 [vongxepsaigon.vn]
 match = -30.3%%
 title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-160cm/
 
 [caicachhanhchinhhungyen.com.vn]
 match = 0.0%%
@@ -157,9 +157,9 @@ title = CHIẾU TRÚC
 url = https://hethongnemtot.com/chieu-truc
 
 [www.sendo.vn]
-match = 12.1%%
-title = Chiếu trúc đen không viền hàng việt nam cao cấp 1m2x2m ...
-url = https://www.sendo.vn/chieu-truc-den-khong-vien-hang-viet-nam-cao-cap-1m2x2m-duo-c-kie-m-ha-ng-31921335-117423477.html
+match = 30.3%%
+title = Chiếu trúc đen không viền 1m6x2m [Được kiểm hàng ...
+url = https://www.sendo.vn/chieu-truc-den-khong-vien-1m6x2m-duo-c-kie-m-ha-ng-31981016-117250610.html
 
 [thegioichieutruc.com]
 match = 0.0%%
