--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-11 06:13:13
+lastsearch = 2024-08-11 09:25:57
 
 [www.tiktok.com]
 match = -152.9%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -229.4%%
 title = Lexicon Palaeslovenico-Græco-Latinum emendatum auctum edidit ...
-url = https://books.google.com/books?id=QBJhAAAAcAAJ&pg=PA10&lpg=PA10&dq=man+in+hoa+dep+16&source=bl&ots=rtyW2DaiUi&sig=ACfU3U0VIk1-3wWp-7Go_-dxbXrB2nkgLg&hl=en&sa=X&ved=2ahUKEwjcmvK7xuuHAxVPMlkFHeVkDvIQ6AF6BAhCEAM
+url = https://books.google.com/books?id=QBJhAAAAcAAJ&pg=PA10&lpg=PA10&dq=man+in+hoa+dep+16&source=bl&ots=rtyW2EceQl&sig=ACfU3U0RHqksp70sdx0kmBCafXqR5QUTGA&hl=en&sa=X&ved=2ahUKEwjqp97F8euHAxWkFFkFHVDgGZwQ6AF6BAhHEAM
 
 [tax.vermont.gov]
 match = -29.4%%
