--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-11 06:50:22
+lastsearch = 2024-08-11 09:35:04
 
 [www.mantubung.com]
-match = -100.0%%
-title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
-url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
+match = -138.9%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -100.0%%
-title = màn chụp cho bé giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp cho bé
+match = -127.8%%
+title = Màn chụp cho bé - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/cho bé
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -32,14 +32,14 @@ title = màn chụp trẻ em cao cấp
 url = http://manchupcuongan.com/man-chup-tre-em-80-x-120cm.html
 
 [manthutrang.com]
-match = -122.2%%
-title = Màn chụp tự bung cho bé – Những quy tắc sử dụng an ...
-url = https://manthutrang.com/blogs/news/man-chup-tu-bung-cho-be-nhung-quy-tac-su-dung-an-toan-cha-me-can-biet
+match = -127.8%%
+title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
+url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
 
 [easydream.vn]
-match = -61.1%%
-title = mùng chụp tự bung gấp gọn cao cấp easy dream
-url = https://easydream.vn/mung-chup-tu-bung-gap-gon-cao-cap-easy-dream-134-15.html
+match = -111.1%%
+title = TOP 5 MÙNG CHỤP TỰ BUNG - MÀN CHỤP CAO CẤP EASY ...
+url = https://easydream.vn/mung-chup-tu-bung-man-chup-tu-bung-3-11.html
 
 [www.mungtubung.com]
 match = -116.7%%
@@ -47,9 +47,9 @@ title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
 url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
 
 [mungmocmien.com]
-match = -111.1%%
-title = Mùng ngủ em bé ( mùng chụp em bé, mùng nôi em bé...)
-url = https://mungmocmien.com/collections/mung-chup-em-be
+match = -94.4%%
+title = Mùng Chụp Tự Bung Đỉnh Rộng Cao Cấp Mộc Miên XL20
+url = https://mungmocmien.com/products/mung-man-chup-tu-bung-dinh-rong-cao-cap-3-cua-3
 
 [tiki.vn]
 match = -11.1%%
@@ -120,4 +120,9 @@ url = https://m.facebook.com/reel/432901842905883/
 match = -144.4%%
 title = Top 10 Màn Chụp Cho Bé tốt nhất hiện nay [Tư Vấn Từ ...
 url = https://vn.my-best.com/36726
+
+[lottemallwestlakehanoi.vn]
+match = -16.7%%
+title = LOTTE MALL WEST LAKE HANOI
+url = https://lottemallwestlakehanoi.vn/
 
