--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-08-11 08:10:30
+lastsearch = 2024-08-11 09:31:36
 
 [www.facebook.com]
 match = -45.0%%
@@ -12,14 +12,14 @@ title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
 url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
 
 [demxanh.com]
-match = -120.0%%
-title = Top 8 thương hiệu nệm bông ép chất lượng nhất hiện nay!
-url = https://demxanh.com/top-thuong-hieu-nem-bong-ep-chat-luong-nhat-hien-nay.html
+match = -75.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
 
 [www.khodemthanhdo.com]
-match = -8.3%%
-title = ĐỆM THÀNH ĐÔ
-url = https://www.khodemthanhdo.com/
+match = 5.0%%
+title = Bộ chăn ga gối pyeoda
+url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [pyeoda.vn]
 match = -95.0%%
@@ -62,9 +62,9 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 4
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-4.html
 
 [vuanem.com]
-match = -125.0%%
-title = Tư vấn cách chọn mua chăn ga gối đệm tốt nhất hiện nay
-url = https://vuanem.com/blog/tu-van-mua-chan-ga-goi-dem-tot.html
+match = -15.0%%
+title = Chăn Ga Pyeoda Cao Cấp, Chính Hãng
+url = https://vuanem.com/brand/pyeoda
 
 [changagoidemphuongbac.com]
 match = -15.0%%
