--- a/images/tui-warmdream-180x200x14/config.ini
+++ b/images/tui-warmdream-180x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x14.html
 lastopen = 2024-06-17 10:46:26
 
 [search]
-lastsearch = 2024-08-11 02:22:49
+lastsearch = 2024-08-11 09:30:35
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -90,4 +90,9 @@ url = https://fowm924.com/bag/lrrxzabx-255/
 match = -58.3%%
 title = tui warmdream 16 - TUI MAGIC LIFE Bodrum - evra504.com
 url = https://www.evra504.com/bag/lrrxzabx-255/
+
+[m.putaixin888.com]
+match = -91.7%%
+title = tui warmdream 16 - The third continent / Wings of Fire Book 16
+url = https://m.putaixin888.com/blog/lrrxzabx-255/
 
