--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-08-11 05:24:48
+lastsearch = 2024-08-11 09:51:39
 
 [www.kymdan.com]
 match = 4.2%%
@@ -17,14 +17,14 @@ title = Bộ Ga Chun Tencel Việt Á - Siêu Mát [SALE -50%%]
 url = https://thegioidemviet.vn/bo-ga-chun-he-tc08/
 
 [toanhuyen.vn]
-match = 6.2%%
-title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
-url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-lily-xanh-ghi/
+match = -21.9%%
+title = Bộ Chăn Ga 160x200 cm Archives - Nội thất Toản Huyền
+url = https://toanhuyen.vn/bo-suu-tap/bo-chan-ga-160x200-cm/
 
 [yeshomebedding.com]
-match = 0.0%%
-title = bộ ga everon esbm 21016
-url = https://yeshomebedding.com/bo-chun-chan-everon-esbm-21016-modal
+match = 11.5%%
+title = bộ chăn ga everon ept24034
+url = https://yeshomebedding.com/bo-san-pham-everon-ept24034
 
 [www.lazada.vn]
 match = -15.6%%
@@ -103,8 +103,8 @@ url = https://www.kymdan.com.au/en/kymdan-latex-mattresses
 
 [thegioinem.com]
 match = 0.0%%
-title = Bộ chăn ga Kim Cương Tencel lụa Maris 2106
-url = https://thegioinem.com/bo-chan-ga-kim-cuong-tencel-lua-maris-2106.html
+title = Bộ chăn ga Kim Cương Tencel lụa Maris 2601
+url = https://thegioinem.com/bo-chan-ga-kim-cuong-tencel-lua-maris-2601.html
 
 [everonthuduc.vn]
 match = -25.0%%
@@ -112,8 +112,8 @@ title = Bộ chăn ga gối Tencel Dreamtex DTF-004 - Nệm Tuan Thao
 url = https://everonthuduc.vn/san-pham/bo-chan-ga-goi-tencel-dreamtex-dtf-004/
 
 [khodem.vn]
-match = -28.1%%
-title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương - Kho đệm
+match = -3.1%%
+title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương
 url = https://khodem.vn/bo-chan-ga-goi-chun-chan-tencel-maris-kim-cuong/
 
 [www.facebook.com]
