--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-11 06:45:09
+lastsearch = 2024-08-11 09:51:20
 
 [www.instagram.com]
-match = -215.4%%
-title = In a world where luxury brands reign supreme ...
-url = https://www.instagram.com/radii_media/p/C4ft1kFvyln/
+match = -123.1%%
+title = Chan Dior Sunshade (@chan_dior_sunshade)
+url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
-match = -276.9%%
-title = Chow hoi ting Chow - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -253.8%%
@@ -32,9 +32,9 @@ title = Sitemap
 url = https://www.linklaters.com/en-us/sitemap
 
 [en.wikipedia.org]
-match = -11.1%%
-title = Fiona Sit
-url = https://en.wikipedia.org/wiki/Fiona_Sit
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Lucie_Daouphars
 
 [press.fourseasons.com]
 match = -269.2%%
@@ -224,7 +224,7 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 [shopee.vn]
 match = -176.9%%
 title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
 
 [hongkongfp.com]
 match = -269.2%%
