--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-11 09:27:25
+lastsearch = 2024-08-11 09:52:00
 
 [www.youtube.com]
 match = -420.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -40.0%%
-title = 14dwy ren on Tumblr
-url = https://www.tumblr.com/tagged/14dwy ren
+match = -50.0%%
+title = ren 14dwy on Tumblr
+url = https://www.tumblr.com/tagged/ren 14dwy
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -37,9 +37,9 @@ title = Ren (@Renmakesmusic) / X
 url = https://twitter.com/renmakesmusic
 
 [www.facebook.com]
-match = 0.0%%
-title = 
-url = https://www.facebook.com/AcuProAcademy/posts/ren-14-cv-14-located-6-cun-above-the-navel-is-the-front-mu-point-of-the-heart-wh/1547299788744965/
+match = -340.0%%
+title = Ren Men in Quarantine Ep 12 - Dramatic Reading 2 ...
+url = https://www.facebook.com/therenmen/videos/ren-men-in-quarantine-ep-12-dramatic-reading-2/397976988042020/
 
 [books.google.com]
 match = -460.0%%
