--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-11 10:14:26
+lastsearch = 2024-08-11 10:45:48
 
 [shopee.vn]
 match = -37.5%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoor5Tfe3jRgQb4EOiXPlEKbLaHuVDdt9aUw5vJ-ursxi7EvsstX
 
 [goni.vn]
 match = 4.2%%
@@ -39,7 +39,7 @@ url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 [sieuthidem.vn]
 match = 16.7%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOopVy_IW-Fz1f80_n_51fS1jONLqLIPAg92nZUyMjm5a4iKI5o4g
 
 [cungnhaulamgiau.vn]
 match = 4.2%%
