--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-10 20:30:31
+lastsearch = 2024-08-11 10:47:50
 
 [shopee.vn]
 match = -33.3%%
@@ -32,9 +32,9 @@ title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyo
 url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [thegioinem.com]
-match = 33.3%%
-title = 10+ mẫu chiếu điều hoà hot nhất năm
-url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
+match = 7.4%%
+title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
+url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [chiaki.vn]
 match = -3.7%%
@@ -42,9 +42,9 @@ title = Review chiếu điều hòa có mát không? Giá bao nhiêu ...
 url = https://chiaki.vn/tin-tuc/review-chieu-dieu-hoa-co-mat-khong-gia-bao-nhieu
 
 [goni.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
-url = https://goni.vn/chieu-dieu-hoa-goni/
+match = -33.3%%
+title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
+url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [phatdatbinhthoi.com.vn]
 match = -25.9%%
@@ -102,8 +102,8 @@ title =
 url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
 [voicon.net]
-match = -22.2%%
-title = Bộ chiếu gối điều hòa cao cấp - CỬA HÀNG MẸ VÀ BÉ ...
+match = 37.0%%
+title = Bộ chiếu gối điều hòa cao cấp
 url = https://voicon.net/bo-chieu-goi-dieu-hoa-cao-cap/
 
 [vtvhyundai.vn]
@@ -165,4 +165,9 @@ url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 match = -37.0%%
 title = Top 3 các loại chiếu điều hòa cao cấp được ưa chuộng ...
 url = https://joliefam.vn/chieu-dieu-hoa-cao-cap/
+
+[suongtuyet.com]
+match = 18.5%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
