--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-11 06:32:47
+lastsearch = 2024-08-11 10:52:17
 
 [demxanh.com]
 match = -42.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html?srsltid=AfmBOopth4YLkMlXrk6iHmC5UqcGrN-sEVWsSC-Ya2-eaDxUiKLuez2w
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
 
 [www.diepxuan.com]
 match = 35.7%%
