--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-11 03:36:28
+lastsearch = 2024-08-11 10:47:08
 
 [www.everonvn.vn]
-match = -34.5%%
-title = Ruột chăn gối Everon cao cấp & chính hãng, có khuyến ...
-url = https://www.everonvn.vn/san-pham/ruot-everon.html
+match = 68.0%%
+title = Ruột gối Everon Lite thấp
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-lite.html
 
 [happynest.vn]
 match = 3.4%%
@@ -32,9 +32,9 @@ title = Ruột gối everon 45x65 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ruột gối everon 45x65
 
 [thegioichanra.com]
-match = 33.3%%
-title = Ruột Gối Thư Giãn Cổ Everon
-url = https://thegioichanra.com/san-pham/ruot-goi-thu-gian-co-everon/
+match = 6.9%%
+title = Ruột Gối Nằm Standard Everon Kích Thước 45×65 cm
+url = https://thegioichanra.com/san-pham/ruot-goi-nam-standard-everon-kich-thuoc-45x65-cm/
 
 [everon.com.vn]
 match = 6.9%%
